<resources>
    <string name="app_name">MathApp</string>
    <string name="version_name">alpha</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="intro">Math by Wilson</string>
    <string name="logo_desc">Logo image for the Math by Wilson mobile app</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">New user? Register Here</string>
    <string name="username">Email Address</string>
    <string name="register_2">Register Your Account</string>
    <string name="password_check">Re-enter Password</string>
    <string name="register_user">Register</string>
    <string name="prompt_fName">First Name</string>
    <string name="prompt_lName">Last Name</string>
    <string name="student_Wilson">Prof. Wilson Student</string>
    <string name="student_notWilson">Other Student</string>
    <string name="copyright">© Copyright of Jacquelyn DeHart - 2020</string>

    <!-- forgot password strings -->
    <string name="reset_password_intro">Reset Your Password</string>
    <string name="reset_password_first">New Password</string>
    <string name="reset_password_verify">Re-enter New Password</string>
    <string name="reset_btn">Reset Password</string>
    <string name="reset_return_to_login">Return to Login</string>

    <!-- send email strings -->
    <string name="email_recipient">Recipient Email(s)</string>
    <string name="email_subject">Subject</string>
    <string name="email_message">Message</string>
    <string name="email_send_btn">Send Email</string>
    <string name="email_warning">To send email, you must select an email app that exists on your device.</string>
    <string name="email_return_to_course_select">Return to Course Selection</string>

    <!-- Video Strings -->
    <string name="video_title">Example Video Title</string>

    <string name="video_button">Video</string>

    <!-- menu item strings-->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Log Out</string>
    <string name="action_email">Email Professor</string>
    <string name="action_exit">Exit App</string>


    <string name="video1_button">Youtube Video</string>
    <string name="video2_button">URL Video</string>
    <string name="loading_string">Loading...</string>
    <string name="toast_message">Complete</string>

    <!-- course strings -->
    <string name="college_algebra">College Algebra</string>
    <string name="calc_1">Calculus 1</string>
    <string name="calc_2">Calculus 2</string>

    <!-- colAlg  strings -->
    <string name="eqs_linear">Equations - Linear</string>
    <string name="com_numbers">Complex Numbers</string>
    <string name="eqs_quad">Equations - Quadratic</string>
    <string name="app_quad">Applications - Quadratic</string>
    <string name="eqs_quadIF">Equations - Quadratic in Form</string>
    <string name="eqs_rational">Equations - Rational</string>
    <string name="eqs_radical">Equations - Radical</string>
    <string name="eqs_abs_val">Equations - Absolute Value</string>
    <string name="ineqs">Inequalities - Overview</string>
    <string name="ineqs_abs">Inequalities - Absolute Value</string>
    <string name="rec_coor_sys">Rectangular Coordinate System</string>
    <string name="circ">Circles</string>
    <string name="fun_dom">FUNctions - Domain</string>
    <string name="fun_ran">FUNctions - Range</string>

    <!-- cal1 strings -->
    <string name="fun_lim">FUNdamental Limit Question</string>
    <string name="fun_graph">FUNdamental Limit Graphs</string>
    <string name="finite_2">Finite - 2 Sided</string>
    <string name="finite_1">Finite - 1 Sided</string>
    <string name="con_func">Continuity of FUNctions</string>
    <string name="infinite">"Infinite - 2 &amp; 1 Sided"</string>
    <string name="to_infin">"At/Toward Infinity - Finite"</string>
    <string name="to_infin_in">"At/Toward Infinity - Infinite"</string>
    <string name="derivatives_intro">Derivatives - Introduction</string>
    <string name="derv_spec">Derivatives - Specific Formulas</string>
    <string name="derv_gen_1">"Derivatives - Generic Formulas (1)"</string>
    <string name="derv_gen_2">"Derivatives - Generic Formulas (2)"</string>
    <string name="derv_rev">Derivatives Review</string>
    <string name="derivatives">Derivatives of FUNctions</string>
    <string name="limits_fun">Limits of FUNctions</string>
    <string name="fun">FUNctions</string>

    <!-- cal2 strings -->
    <string name="applications_antiderivatives">Applications – Antiderivatives</string>
    <string name="pos_velocity_acceleration">Position &amp; Velocity &amp; Acceleration</string>
    <string name="area_between_curve">Area between Curves</string>
    <string name="volume_1">Volume (Disk and Washer Methods) part 1</string>
    <string name="volume_2">Volume (Disk and Washer Methods) part 2</string>
    <string name="volume_shell">Volume (Shell Method)</string>
    <string name="arc_length">Arc Length</string>
    <string name="area_surface">Area – Surface</string>
    <string name="app_physics">Applications – Physics</string>

    <string name="log_exponential_functions">Logarithmic and Exponential FUNctions</string>
    <string name="log_exponential_video">Video – FUN: Log &amp; Exp</string>
    <string name="log_differentiation">Video – Log Differentiation</string>

    <string name="hyperbolic">Hyperbolic FUNctions</string>

    <string name="antiderivative_tech">Antiderivatives – Techniques</string>
    <string name="calc1_review">Calculus I Review</string>
    <string name="integration_by_parts">Integration by Parts</string>
    <string name="inverse_trig_functions">Inverse Trigonometric FUNctions</string>
    <string name="quad_integrals">Quadratic Integrals – Complex Numbers</string>
    <string name="trig_integrals">Trigonometric Integrals</string>
    <string name="rational_functions">Rational FUNctions</string>

    <string name="integration">Integration</string>
    <string name="integration_definite">Integration – Definite (Review)</string>
    <string name="integration_numeric">Integration – Definite (Review)</string>
    <string name="midpoint_method">Midpoint Method</string>
    <string name="trapezoid_rule">Trapezoid Rule</string>
    <string name="integrals_improper">Integrals – Improper</string>
    <string name="integrals_overview">Overview – Definite Integral (Proper &amp; Improper)</string>

    <string name="sequences_series">Sequences &amp; Series</string>
    <string name="sequences">Sequences</string>
    <string name="series">Series</string>
    <string name="numerical_intro">Numerical – Introduction</string>
    <string name="numeric_tests_1">Numerical – Tests part 1</string>
    <string name="numeric_tests_2">Numerical – Tests part 2</string>
    <string name="new_series_from_old">New Series from Old Series</string>
    <string name="power_series">Power Series</string>
    <string name="power_series_intro_1">Power Series - Intro 1</string>
    <string name="power_series_intro_2">Power Series - Intro 2</string>
    <string name="maclaurin_series">MacLaurin Series</string>
    <string name="taylor_series">Taylor Series</string>
    <string name="parametric_equations">Parametric Equations</string>
    <string name="parametric_precal">Parametric Equations - PreCalculus</string>
    <string name="parametric_calculus">Parametric Equations - Calculus</string>
    <string name="polar_coordinates">Polar Coordinates</string>
    <string name="polar_coordinates_intro">Polar Coordinates - Intro</string>
    <string name="tangent_lines">Tangent Lines</string>
    <string name="area_arc_length">Area &amp; Arc Length</string>


    <!-- selection strings -->
    <string name="pick_course">Select a Course:</string>
    <string name="return_video_select">Return to Video Selection</string>


</resources>