<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="0"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_email"
        android:title="@string/action_email"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:icon="@drawable/exit_button"
        app:showAsAction="always"
        />

</menu>